// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldPassword is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldPassword testClass1 testClass2"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="password"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props fullWidth false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldPassword"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props fullWidth true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldPassword euiFieldPassword--fullWidth"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props isInvalid false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="false"
  >
    <input
      class="euiFieldPassword"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props isInvalid true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldPassword"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props isLoading false is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="false"
>
  <eui-validatable-control>
    <input
      class="euiFieldPassword"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldPassword props isLoading true is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="lock"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldPassword euiFieldPassword-isLoading"
      type="password"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
